Fix inputs order on mobile

--- a/source/components/_pages/Dashboard/Main/MyProfile/MyProfile-responsive.styl
+++ b/source/components/_pages/Dashboard/Main/MyProfile/MyProfile-responsive.styl
@@ -47,12 +47,15 @@
         .sign-up__column {
             flex: 0 0 48%
         }
+        .sign-up__container--enterpreneur > * {
+	        width: 100%;	
+        }
     }
 }
 @media screen and (max-width: 768px) and (orientation: landscape) {
     .MyProfile{
-        .sign-up__column {
-            flex: 0 0 48%
+        .sign-up__container--enterpreneur > * {
+	        width: 100%;	
         }
     }
 }
